--- a/.render.yaml
+++ b/.render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: flask-app
     env: python
-    buildCommand: ""
+    buildCommand: "pip install -r requirements.txt"
     startCommand: gunicorn app:app
     envVars:
       - key: FLASK_ENV
