--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MYSQL_URL=mysql://root:PmbFnkCzdfcCGRJrbbVnPhxvkmKcLyEj@gondola.proxy.rlwy.net:56692/railway
+FLASK_APP=app.py
+postgresql://euirim:1DBMpSNDFK1OKMDzeBjxY7kDdlWBpiTs@dpg-d0vusoggjchc73a63srg-a.oregon-postgres.render.com/bookclub_mslp
